# personal-assistant

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md  pyproject.toml
configs/: baseline.yaml  default.yaml
domains/: README.md
domains/finance/: __init__.py  (+4 more)
eval/: __init__.py  report.py  run.py  score.py
kernel/: PROACTIVE.md  RETRIEVAL.md  RUNTIME.md  SYNC.md  __init__.py  audit.py  classifier.py  claude_runner.py  conflict_watcher.py  index.py  orchestrator.py  proactive.py  retrieval.py  session.py  telegram_bridge.py  vault.py
plans/: personal-assistant-prd-20260429.md
tests/: conftest.py  test_audit.py  test_classifier.py  test_claude_runner.py  test_conflict_watcher.py  test_eval_cases_validity.py  test_eval_report.py  test_eval_run.py  test_eval_score.py  test_finance_digest.py  test_finance_handler.py  test_fitness_digest.py  test_fitness_handler.py  test_fitness_plan_generation.py  test_index.py  test_index_refresh.py  test_inventory_digest.py  test_inventory_handler.py  test_journal_digest.py  test_journal_handler.py  test_journal_read.py  test_launchd_plists.py  test_orchestrator.py  test_orchestrator_finance.py  test_orchestrator_fitness.py  test_orchestrator_index_trigger.py  test_orchestrator_inventory.py  test_orchestrator_journal.py  test_orchestrator_journal_query.py  test_orchestrator_reminder.py  test_orchestrator_retrieval_audit.py  test_proactive.py  test_reminder_handler.py  test_retrieval.py  test_retrieval_booleans.py  test_retrieval_budget.py  test_retrieval_tools.py  test_session.py  test_telegram_bridge.py  test_vault.py  (+1 more)
(+44 files in other folders)
